Updatre to Django 1.10

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,29 @@
-Django==1.9.8
+alabaster==0.7.8
+astroid==1.4.8
+Babel==2.3.4
 coverage==4.1
+dj-database-url==0.4.1
+Django==1.10
+docutils==0.12
+gunicorn==19.6.0
+imagesize==0.7.1
 isodate==0.5.4
+isort==4.2.5
+Jinja2==2.8
+lazy-object-proxy==1.2.2
+MarkupSafe==0.23
+mccabe==0.5.2
+psycopg2==2.6.1
+Pygments==2.1.3
+pylint==1.6.4
+pylint-django==0.7.2
+pylint-plugin-utils==0.2.4
+pyparsing==2.1.5
+pytz==2016.4
 rdflib==4.2.1
 requests==2.10.0
-psycopg2==2.6.1
-
-# Heroku
-dj-database-url==0.4.1
-gunicorn==19.6.0
-pyparsing==2.1.5
-whitenoise==3.2
-
-# Sphinx
-Sphinx==1.4.4
-Jinja2==2.8
-MarkupSafe==0.23
-imagesize==0.7.1
-docutils==0.12
-Pygments==2.1.3
-alabaster==0.7.8
-Babel==2.3.4
-snowballstemmer==1.2.1
 six==1.10.0
-pytz==2016.4
+snowballstemmer==1.2.1
+Sphinx==1.4.4
+whitenoise==3.2
+wrapt==1.10.8
